--- a/src/assets/style/index.css
+++ b/src/assets/style/index.css
@@ -1,3 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+.rdp-nav{
+    & button{
+        & svg {
+            fill: #018A65 !important;
+        }
+    }
+}
